--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/config/a380x/a380-842/flypad-payload.json5
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/config/a380x/a380-842/flypad-payload.json5
@@ -17,7 +17,12 @@
 {
     "configMajorVersion": 0,
     "configMinorVersion": 1,
-    "_type": 2,
+    "_canvas": {
+        "width": 1000,
+        "height": 150,
+        "canvasX": 146,
+        "canvasY": 71
+    },
     "chartLimits": {
         "weight": {
             "min": 235000,
@@ -41,5 +46,88 @@
             "mlw": { "x1": 0.75, "x2": 0.12, "y": 0.47 },
             "mzfw": { "x1": 0.75, "x2": 0.12, "y": 0.57 }
         }
-    }
+    },
+    "_seatDisplay": [
+        {
+            // NarrowbodyEconomy
+            len: 25.4,
+            wid: 19.2,
+            padX: 6.8,
+            padY: 0,
+            imageX: 25.4,
+            imageY: 19.2,
+        },
+        {
+            // NarrowbodyEconomyEmergency
+            len: 25.4,
+            wid: 19.2,
+            padX: 13.8,
+            padY: 0,
+            imageX: 25.4,
+            imageY: 19.2,
+        },
+        {
+            // WidebodyEconomy
+            len: 16,
+            wid: 12.125,
+            padX: 2,
+            padY: 0,
+            imageX: 16,
+            imageY: 12.125,
+        },
+        {
+            // WidebodyEconomyEmergency
+            len: 16,
+            wid: 12.125,
+            padX: 2,
+            padY: 0,
+            imageX: 16,
+            imageY: 12.125,
+        },
+        {
+            // WidebodyBusinessFlatRight
+            len: 24,
+            wid: 23.22,
+            padX: 1,
+            padY: 0,
+            imageX: 24,
+            imageY: 23.22,
+        },
+        {
+            // WidebodyBusinessFlatLeft
+            len: 24,
+            wid: 23.22,
+            padX: 1,
+            padY: 0,
+            imageX: 24,
+            imageY: 23.22,
+        },
+        {
+            // WidebodySuiteRight
+            len: 35,
+            wid: 20,
+            padX: 2,
+            padY: 0,
+            imageX: 50,
+            imageY: 50,
+        },
+        {
+            // WidebodySuiteLeft
+            len: 35,
+            wid: 20,
+            padX: 5,
+            padY: 0,
+            imageX: 50,
+            imageY: 50,
+        },
+        {
+            // WidebodyPremiumEconomy
+            len: 18,
+            wid: 13.64,
+            padX: 2,
+            padY: 0,
+            imageX: 18,
+            imageY: 13.64,
+        }
+    ]
 }
