--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/config/a380x/a380-842/flypad-payload.json5
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/config/a380x/a380-842/flypad-payload.json5
@@ -47,7 +47,7 @@
             "mzfw": { "x1": 0.75, "x2": 0.12, "y": 0.57 }
         }
     },
-    "_seatDisplay": [
+    "seatDisplay": [
         {
             // NarrowbodyEconomy
             len: 25.4,
