--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/config/a32nx/a320-251n/flypad-payload.json5
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/config/a32nx/a320-251n/flypad-payload.json5
@@ -29,13 +29,7 @@
             "max": 80000,
             "lines": 9,
             "scale": 5000,
-            "values": [
-                80,
-                70,
-                60,
-                50,
-                40
-            ]
+            "values": [ 80, 70, 60, 50, 40]
         },
         "cg": {
             "angleRad": 0.014025,
@@ -45,34 +39,15 @@
             "highlight": 5,
             "lines": 35,
             "scale": 1,
-            "values": [
-                15,
-                20,
-                25,
-                30,
-                35,
-                40
-            ]
+            "values": [ 15, 20, 25, 30, 35, 40 ]
         },
         "labels": {
-            "mtow": {
-                "x1": 0.65,
-                "x2": 0.22,
-                "y": 0.02
-            },
-            "mlw": {
-                "x1": 0.65,
-                "x2": 0.22,
-                "y": 0.22
-            },
-            "mzfw": {
-                "x1": 0.65,
-                "x2": 0.22,
-                "y": 0.29
-            }
+            "mtow": { "x1": 0.65, "x2": 0.22, "y": 0.02},
+            "mlw": { "x1": 0.65, "x2": 0.22, "y": 0.22},
+            "mzfw": { "x1": 0.65, "x2": 0.22, "y": 0.29}
         }
     },
-    "_seatDisplay": [
+    "seatDisplay": [
         {
             // NarrowbodyEconomy
             len: 25.4,
